# MusicPlayer-FastAPI

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
backend/: .env.example  .gitignore  pyproject.toml  pyproject.toml.bak  seed_users_sql.py
backend/alembic/: env.py
backend/alembic/versions/: 0a49ad6325e0_add_email_verification_fields.py  0caba04c2ae1_refresh_token_rotation.py  0cf1441527ec_added_refresh_token_model.py  0da5ab17c70f_clean_initial_migration.py  2bb752090ec0_create_all_tables.py  3001c0ec2b93_initial_migration.py  35270b889807_added_refresh_token_model.py  407106d49b66_make_band_owner_non_nullable.py  51eb42f5babc_add_playlist_sharing_and_collaboration_.py  5a5ad4a8417c_initial_tables.py  95b5ebff5e7a_add_is_cleared_to_history.py  d26c51e9f683_add_band_owner_field.py  daa5f38e3ecc_rename_tables.py  e18b0c60c1c6_updated_schema.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  deps.py  exception.py  exception_handler.py  exceptions.py  security.py  upload.py  utils.py
backend/app/crud/: album.py  album_song.py  artist.py  artist_band_member.py  audit_log.py  band.py  email.py  following.py  genre.py  history.py  like.py  localization.py  payment.py  playlist.py  playlist_collaborator.py  playlist_song.py  song.py  subscription_plan.py  system_config.py  user.py  user_subscription.py
backend/app/db/: README.md  base.py  session.py
backend/app/dependencies/: __init__.py  auth_deps.py  email_dependency.py
backend/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  start.sh
frontend/: README.md  (+2 more)
(+116 files in other folders)
