[tool.poetry]
name = "backend"
version = "0.1.0"
description = "music streamer"
authors = ["myndaaa <myshaaa31ns@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]


[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
sqlalchemy = ">=2.0.41,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
cloudinary = ">=1.44.1,<2.0.0"
dotenv = "^0.9.9"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
argon2-cffi = "^25.1.0"
pyjwt = "^2.10.1"
email-validator = "^2.2.0"
bcrypt = "4.0.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

